--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Robert Babaev",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
