--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "invite": "node src/invite.js"
+    "server": "node src/server.js"
   },
   "author": "Robert Babaev",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "mongoose": "^5.13.5"
   },
   "devDependencies": {
